--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,8 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
-# testing
-/coverage
+
 
 # next.js
 /.next/
@@ -21,11 +18,10 @@
 
 # debug
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
 
 # local env files
-.env*.local
+.env
 
 # vercel
 .vercel
